fix h4 contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@ h3 {
 
 h4 {
   font-size: 1.6rem;
-  color: #707070;
+  color: #42414F;
   font-weight: 700; }
   @media only screen and (max-width: 400px) {
     h4 {
@@ -254,7 +254,7 @@ main {
           width: 32px; }
           @media only screen and (max-width: 400px) {
             #side-nav ul li a img {
-              width: 2rem; } }
+              width: inherit; } }
       #side-nav ul li:hover {
         background-color: #707070; }
       #side-nav ul li.active {
